docs: add swagger description
