# api/openapi.yaml
@@ -7,6 +7,11 @@ servers:
     description: Production API
 components:
   schemas:
+    ReCreateOrderRequest:
+      type: object
+      properties:
+        order_id:
+          type: string
     OrderCreateRequest:
       type: object
       required:
@@ -114,6 +119,204 @@ components:
         details:
           description: "The error details."
           type: string
+    PaymentFormJsonData:
+      type: object
+      properties:
+        id:
+          type: string
+        account:
+          description: "@inject_tag: json\" account,omitempt\""
+          type: string
+        has_vat:
+          description: "@inject_tag: json\" has_va\""
+          type: boolean
+        vat:
+          description: "@inject_tag: json\" va\""
+          type: number
+        amount:
+          type: number
+        total_amount:
+          type: number
+        currency:
+          type: string
+        project:
+          type: object
+          properties:
+            name:
+              description: "@inject_tag: json\" nam\""
+              type: string
+            url_success:
+              description: "@inject_tag: json\" url_succes\""
+              type: string
+            url_fail:
+              description: "@inject_tag: json\" url_fai\""
+              type: string
+            id:
+              description: "@inject_tag: json\" i\""
+              type: string
+        payment_methods:
+          type: array
+          items:
+            properties:
+              id:
+                type: string
+              name:
+                type: string
+              type:
+                type: string
+              group_alias:
+                description: "@inject_tag: json\" group_alia\""
+                type: string
+              account_regexp:
+                type: string
+              has_saved_cards:
+                description: "@inject_tag: json\" has_saved_card\""
+                type: boolean
+              saved_cards:
+                type: array
+                items:
+                  properties:
+                    id:
+                      type: string
+                    pan:
+                      type: string
+                    card_holder:
+                      type: string
+                    expire:
+                      type: object
+                      properties:
+                        month:
+                          description: "@inject_tag: bson\" mont\""
+                          type: string
+                        year:
+                          description: "@inject_tag: bson\" yea\""
+                          type: string
+        token:
+          type: string
+        user_address_data_required:
+          description: "@inject_tag: json\" user_address_data_require\""
+          type: boolean
+        user_ip_data:
+          type: object
+          properties:
+            country:
+              description: "@inject_tag: json\" countr\""
+              type: string
+            city:
+              description: "@inject_tag: json\" cit\""
+              type: string
+            zip:
+              description: "@inject_tag: json\" zi\""
+              type: string
+        items:
+          type: array
+          items:
+            properties:
+              id:
+                description: "@inject_tag: validate\" required,hexadecimal,len=2\" json\"i\" bson\"_i\""
+                type: string
+              object:
+                description: "@inject_tag: validate\" require\" json\"objec\" bson\"objec\""
+                type: string
+              sku:
+                description: "@inject_tag: validate\" require\" json\"sk\" bson\"sk\""
+                type: string
+              name:
+                description: "@inject_tag: validate\" require\" json\"nam\" bson\"nam\""
+                type: string
+              description:
+                description: "@inject_tag: validate\" require\" json\"descriptio\" bson\"descriptio\""
+                type: string
+              amount:
+                description: "@inject_tag: validate\" required,numeric,gt=\" json\"amoun\" bson\"amoun\""
+                type: number
+              currency:
+                description: "@inject_tag: validate\" required,alpha,len=\" json\"currenc\" bson\"currenc\""
+                type: string
+              images:
+                description: "@inject_tag: validate\" dive,omitempty,ur\" json\"image\" bson\"image\""
+                type: array
+                items:
+                  type: string
+              url:
+                description: "@inject_tag: validate\" omitempty,ur\" json\"ur\" bson\"ur\""
+                type: string
+              created_at:
+                type: object
+                properties:
+                  seconds:
+                    description: "9999-12-31T23:59:59Z inclusive."
+                    type: integer
+                  nanos:
+                    description: "inclusive."
+                    type: integer
+              updated_at:
+                type: object
+                properties:
+                  seconds:
+                    description: "9999-12-31T23:59:59Z inclusive."
+                    type: integer
+                  nanos:
+                    description: "inclusive."
+                    type: integer
+              platform_id:
+                description: "@inject_tag: validate\" omitempty,min=\" json\"platform_i\" bson\"platform_i\""
+                type: string
+              code:
+                description: "@inject_tag: validate\" omitempty,min=\" json\"cod\" bson\"cod\""
+                type: string
+        email:
+          description: "@inject_tag: json\" emai\""
+          type: string
+        description:
+          description: "@inject_tag: json\" descriptio\""
+          type: string
+        country_payments_allowed:
+          description: "@inject_tag: json\" country_payments_allowe\""
+          type: boolean
+        country_change_allowed:
+          description: "@inject_tag: json\" country_change_allowe\""
+          type: boolean
+        platforms:
+          type: array
+          items:
+            properties:
+              id:
+                description: "@inject_tag: validate\" required,hexadecimal,len=2\" json\"i\""
+                type: string
+              name:
+                description: "@inject_tag: json\" nam\""
+                type: string
+        lang:
+          description: "@inject_tag: json\" lan\""
+          type: string
+        is_already_processed:
+          description: "@inject_tag: json\" is_already_processe\""
+          type: boolean
+        receipt_url:
+          description: "@inject_tag: json\" receipt_ur\""
+          type: string
+        type:
+          description: "@inject_tag: json\" typ\""
+          type: string
+        charge_currency:
+          description: "@inject_tag: json\" charge_currenc\""
+          type: string
+        charge_amount:
+          description: "@inject_tag: json\" charge_amoun\""
+          type: number
+        vat_in_charge_currency:
+          description: "@inject_tag: json\" vat_in_charge_currenc\""
+          type: number
+        vat_rate:
+          description: "@inject_tag: json\" vat_rat\""
+          type: number
+        vat_payer:
+          description: "@inject_tag: json\" vat_paye\""
+          type: string
+        is_production:
+          description: "@inject_tag: json\" is_productio\""
+          type: boolean
 paths:
   /api/v1/order:
     post:
@@ -135,7 +338,77 @@ paths:
               schema:
                 $ref: "#/components/schemas/CreateOrderJsonProjectResponse"
         "400":
-          description: The error code and message with the error details.
+          description: The error code and message with the error details
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseErrorMessage"
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseErrorMessage"
+  /api/v1/order/{order_id}:
+    get:
+      summary: Get a data of an order by the order ID
+      operationId: orderIdPathGetPaymentFormData
+      description: Get a data of an order for rendering a payment form
+      tags:
+      - Order
+      parameters:
+      - name: order_id
+        description: The unique identifier for the order
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PaymentFormJsonData"
+        "400":
+          description: Invalid request data
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseErrorMessage"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseErrorMessage"
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseErrorMessage"
+  /api/v1/order/recreate:
+    post:
+      summary: Recreate a payment order
+      operationId: orderReCreatePathRecreateOrder
+      description: Recreate a payment order using an order UUID for the old order
+      tags:
+      - Order
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ReCreateOrderRequest"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CreateOrderJsonProjectResponse"
+        "400":
+          description: The error code and message with the error details
           content:
             application/json:
               schema:
